# prognos

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CodeStats_Future_Roadmap.md  CodeStats_Project_Report.md  CodeStats_Updated_Requirements.md  PROGRESS.md  README.md  implementation.md  railway.toml  render.yaml  requirement.md  run.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_auth_tables.py  002_add_user_handles.py  003_add_analytics_tables.py  004_add_missing_unique_constraints.py  005_add_contests_table.py  006_add_classroom_tables.py  007_submissions_unique_per_handle.py  008_classroom_last_bulk_sync.py
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  analytics.py  base.py  classroom.py  refresh_token.py  signals.py  user.py  user_handle.py
backend/app/schemas/: analytics.py  auth.py  classroom.py  contests.py  handle.py  user.py
backend/app/services/: analytics.py  auth.py  classroom.py  contests.py  handle.py
backend/app/workers/: celery_app.py  cf_sync.py  classroom_sync.py  clist_sync.py  enqueue.py
backend/tests/: conftest.py
backend/tests/integration/: test_analytics_routes.py  test_auth_service.py  test_classroom_routes.py  test_clist_sync_integration.py  test_contests_routes.py  test_handle_routes.py  test_submissions_unique.py  test_sync_endpoint.py  test_user_handle_constraints.py  test_weaknesses_recommendations.py
backend/tests/unit/: test_clist_sync.py  test_contests_service.py  test_handle_service.py  test_user_handle_model.py  test_weakness_signals.py
(+222 files in other folders)
