[project]
name = "prognos-backend"
version = "0.1.0"
description = "PROGNOS API — Competitive Programming Analytics Platform"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.3",
    "fastapi>=0.137.2",
    "google-auth>=2.55.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=6.4.0",
    "requests>=2.34.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-docx>=1.2.0",
    "respx>=0.23.1",
    "ruff>=0.15.21",
]
